cloudformation/rds-postgres.yml
AWSTemplateFormatVersion: 2010-09-09
Description: RDS PostgreSQL cluster.

Parameters:
  DBSubnet1ID:
    Type: AWS::EC2::Subnet::Id
    MinLength: '1'
    Description: "Database Subnet 1 (Use Private Subnet 1B)"
  DBSubnet2ID:
    Type: AWS::EC2::Subnet::Id
    MinLength: '1'
    Description: "Database Subnet 2 (Use Private Subnet 2B)"
  DBSubnet3ID:
    Type: AWS::EC2::Subnet::Id
    MinLength: '1'
    Description: "Database Subnet 3 (Use Private Subnet 4B)"

  VPCID:
    Type: "AWS::EC2::VPC::Id"
    MinLength: '1'
    Description: "VPC For RDS (Created from Application Stack)"

  DBUsername:
    Type: "String"
    Default: "postgres"
    AllowedPattern: "[a-zA-Z0-9]+"
    ConstraintDescription: must contain only alphanumeric characters. Must have length 1-16
    Description: The database admin account user name. (Default "postgres")
    MaxLength: 16
    MinLength: 1

  DBInstanceType:
    Default: db.t3.small
    Description: "The instance type to use for the database. Pricing: https://aws.amazon.com/rds/aurora/pricing/"
    Type: String
    MinLength: 1

  DBPassword:
    ConstraintDescription: must contain only alphanumeric characters. Must have length 8-41.
    Description: The database admin account password. (Choose a secure password)
    MinLength: 8
    NoEcho: 'true'
    Type: String

  DBPreferredBackupWindow:
    Default: '07:00-08:00'
    Type: 'String'

  DBPreferredMaintenanceWindow:
    Default: 'mon:08:00-mon:09:00'
    Type: 'String'

  DBBackupRetention:
    Default: '7'
    Type: 'Number'
    MinValue: '1'
    Description: 'Database backup retention period (in days)'

  DBSnapshotIdentifier:
    Default: ''
    Type: 'String'
    Description: 'Optional Database Snapshot to restore for database. If left empty , empty database is created'

  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup::Id
    MinLength: 1
    Description: 'Application Security Group Id'

  JumpHostSecurityGroup:
    Type: String
    Description: 'Jump Host Security Group Id (Optional)'
    Default: ''

  PostgresVersion:
    Type: 'String'
    Description: 'Postgres Version'
    AllowedValues:
      - '13.13'
      - '14.9'
      - '15.4'
    Default: '15.4'

  PostgresFamily:
    Type: 'String'
    Description: 'Postgres Family'
    AllowedValues:
      - 'postgres13'
      - 'postgres14'
      - 'postgres15'
    Default: 'postgres15'

  MultiAZ:
    Type: String
    Description: 'Multi AZ Deployment'
    AllowedValues:
      - 'true'
      - 'false'
    Default: 'false'




Conditions:
  JumpHostSecurityGroupPresent: !Not [!Equals [!Ref 'JumpHostSecurityGroup', '']]
  Postgres13: !Equals [!Ref PostgresFamily, 'postgres13']
  Postgres14: !Equals [!Ref PostgresFamily, 'postgres14']
  Postgres15: !Equals [!Ref PostgresFamily, 'postgres15']


Resources:

  DatabaseSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: CloudFormation managed DB subnet group.
      SubnetIds:
        - !Ref DBSubnet1ID
        - !Ref DBSubnet2ID
        - !Ref DBSubnet3ID

  ParameterGroupPostgres13:
    Type: AWS::RDS::DBParameterGroup
    Properties:
      Description: DB parameter group for PostgreSQL 13
      Family: !Ref PostgresFamily
      Parameters: {}
    Condition: Postgres13

  ParameterGroupPostgres14:
    Type: AWS::RDS::DBParameterGroup
    Properties:
      Description: DB parameter group for PostgreSQL 14
      Family: !Ref PostgresFamily
      Parameters: {}
    Condition: Postgres14

  ParameterGroupPostgres15:
    Type: AWS::RDS::DBParameterGroup
    Properties:
      Description: DB parameter group for PostgreSQL 15
      Family: !Ref PostgresFamily
      Parameters: {}
    Condition: Postgres15

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPCID
      GroupDescription: Access to database
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref AppSecurityGroup
          Description: Allow access from application
          FromPort: 5432
          ToPort: 5432
          IpProtocol: 'TCP'

  JumpHostAccess:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      SourceSecurityGroupId: !Ref DatabaseSecurityGroup
      Description: Allow access from Jump host
      FromPort: 5432
      ToPort: 5432
      IpProtocol: 'TCP'
    Condition: JumpHostSecurityGroupPresent


  DatabaseInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      AutoMinorVersionUpgrade: 'true'
      AllocatedStorage: 20
      MaxAllocatedStorage: 4000
      AllowMajorVersionUpgrade: 'true'
      BackupRetentionPeriod: !Ref DBBackupRetention
      CopyTagsToSnapshot: 'true'
      DBInstanceClass: !Ref DBInstanceType
      DBParameterGroupName: !If 
        - Postgres13
        - !Ref ParameterGroupPostgres13
        - !If 
          - Postgres14
          - !Ref ParameterGroupPostgres14
          - !Ref ParameterGroupPostgres15
      DBSubnetGroupName: !Ref DatabaseSubnetGroup
      PubliclyAccessible: "false"
      DBSnapshotIdentifier: !Ref DBSnapshotIdentifier
      DeleteAutomatedBackups: "true"
      DeletionProtection: "true"
      EnableIAMDatabaseAuthentication: 'true'
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      Engine: postgres
      EngineVersion: !Ref PostgresVersion
      PreferredMaintenanceWindow: !Ref DBPreferredMaintenanceWindow
      PreferredBackupWindow: !Ref DBPreferredBackupWindow
      StorageEncrypted: "true"
      StorageType: "gp2"
      VPCSecurityGroups:
        - !Ref DatabaseSecurityGroup
      MultiAZ: !Ref MultiAZ
    DeletionPolicy: "Retain"


Outputs:
  DatabaseEndpoint:
    Description: The database endpoint
    Value: !GetAtt DatabaseInstance.Endpoint.Address

  DatabasePort:
    Description: The database port
    Value: !GetAtt DatabaseInstance.Endpoint.Port

  DatabaseSecurityGroup:
    Value: !Ref DatabaseSecurityGroup

  DatabaseInstance:
    Value: !Ref DatabaseInstance

  DatabaseSubnetGroup:
    Value: !Ref DatabaseSubnetGroup
